# circlex

./: README.md  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_post.py  0003_alter_post_post_id.py  0004_post_created_on.py  0005_post_post_author.py  0006_comment.py  0007_extendeduser_profile_picture.py
circlex/: asgi.py  settings_base.py  sitemaps.py  urls.py  urls_dev.py  wsgi.py
circlex/settings/: dev.py  prod.py
frontend/: urls.py  views.py
frontend/static/css/: custom.css
frontend/templates/: base.html  posts.html  user.html
theme/static_src/: package-lock.json  tailwind.config.js
theme/templates/: base.html  posts.html  user.html
