[tool.poetry]
name = "circlex"
version = "0.1.0"
description = "A simple social media project for automatic posts generations"
authors = ["Aman Rawat <kirmolaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.2"
markdown = "^3.6"
django-filter = "^24.2"
python-dotenv = "^1.0.1"
shortuuid = "^1.0.13"
cookiecutter = "^2.6.0"
pillow = "^10.3.0"
django-debug-toolbar = "^4.3.0"
dj-database-url = "^2.1.0"
django-cockroachdb = "^5.0"
psycopg = "^3.1.19"


[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.12.1"
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
